# rust_dbot_template

./: .env.example  Cargo.toml
src/: bot.rs  main.rs  utils.rs
src/bot/: commands.rs  data.rs  handler.rs  hooks.rs
src/bot/commands/: general.rs  help.rs  owner.rs
src/bot/commands/general/: latency.rs  ping.rs
src/bot/commands/owner/: quit.rs
src/bot/hooks/: after.rs  dispatch_error.rs
src/utils/: error.rs  fmt.rs
src/utils/fmt/: duration.rs  list.rs
