[package]
name = "rust_dbot_template"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "^0.15.0"
tracing = "^0.1.26"
tracing-subscriber = "^0.2.18"

[dependencies.serenity]
version = "^0.10.8"

[dependencies.tokio]
version = "^1.6.1"
features = ["macros", "rt-multi-thread"]

[dev-dependencies]
test-case = "^1.1.0"
